monitoring-stack/grafana/grafana-oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-oauth
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana-oauth
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grafana-oauth
    spec:
      containers:
        - args:
            - -provider=openshift
            - -https-address=:3000
            - -http-address=
            - -email-domain=*
            - -upstream=http://grafana-service:3000
            - '-openshift-sar={"resource": "namespaces", "verb": "get"}'
            - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}}'
            - -tls-cert=/etc/tls/private/tls.crt
            - -tls-key=/etc/tls/private/tls.key
            - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
            - -cookie-secret=SECRET
            - -openshift-service-account=grafana-oauth
            - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
            - -skip-auth-regex=^/metrics
          image: quay.io/openshift/okd-content@sha256:644bcaca0a108801e83f4c3585c267e069bd6d7975c4234cd6498d96693211b0
          name: grafana-proxy
          ports:
            - containerPort: 3000
              name: https
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /oauth/healthz
              port: https
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 1m
              memory: 20Mi
          volumeMounts:
            - mountPath: /etc/tls/private
              name: secret-grafana-oauth-tls
      priorityClassName: system-cluster-critical
      serviceAccountName: grafana-oauth
      volumes:
        - name: secret-grafana-oauth-tls
          secret:
            defaultMode: 420
            secretName: grafana-oauth-tls
