monitoring-stack/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: grafana-oauth-tls
  name: grafana-oauth
spec:
  ports:
  - name: https
    port: 3000
    targetPort: https
  selector:
    app: grafana
