monitoring-stack/grafana/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-oauth
spec:
  host: grafana-monitoring-stack.apps.okd.baloise.dev
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: grafana-oauth
    weight: 100
  wildcardPolicy: None
